<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_expert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/return_view"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="0dp"
        app:backgroundTint="@color/Transparent"
        app:icon="@drawable/ic_return"
        app:iconSize="@dimen/dp30"
        app:iconTint="@color/black"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="@color/white" />

    <TextView
        android:id="@+id/expert_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_function"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_big2"
        app:layout_constraintLeft_toLeftOf="@+id/expert_tip"
        app:layout_constraintTop_toBottomOf="@+id/return_view" />

    <TextView
        android:id="@+id/expert_tip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp5"
        android:text="@string/detail_tip_function"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_middle3"
        app:layout_constraintBottom_toTopOf="@+id/expert_tip_1"
        app:layout_constraintLeft_toLeftOf="@+id/expert_tip_1"
        app:layout_constraintRight_toRightOf="@+id/expert_tip_1"
        app:layout_constraintTop_toBottomOf="@+id/expert_title"
        app:layout_constraintVertical_bias="0.8"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/expert_tip_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp10"
        android:text="@string/detail_tip_function_1"
        android:textColor="#999999"
        android:textSize="@dimen/text_size_middle1"
        app:layout_constraintBottom_toTopOf="@+id/expert_tip_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expert_tip"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/expert_tip_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp5"
        android:text="@string/detail_tip_function_2"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_middle3"
        app:layout_constraintBottom_toTopOf="@+id/expert_tip_3"
        app:layout_constraintLeft_toLeftOf="@+id/expert_tip_1"
        app:layout_constraintRight_toRightOf="@+id/expert_tip_1"
        app:layout_constraintTop_toBottomOf="@+id/expert_tip_1"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/expert_tip_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp10"
        android:text="@string/detail_tip_function_3"
        android:textColor="#999999"
        android:textSize="@dimen/text_size_middle1"
        app:layout_constraintBottom_toTopOf="@+id/expert_tip_4"
        app:layout_constraintLeft_toLeftOf="@+id/expert_tip_1"
        app:layout_constraintRight_toRightOf="@+id/expert_tip_1"
        app:layout_constraintTop_toBottomOf="@+id/expert_tip_2"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/expert_tip_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp5"
        android:text="@string/detail_tip_function_4"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_middle3"
        app:layout_constraintBottom_toTopOf="@+id/expert_tip_5"
        app:layout_constraintLeft_toLeftOf="@+id/expert_tip_1"
        app:layout_constraintRight_toRightOf="@+id/expert_tip_1"
        app:layout_constraintTop_toBottomOf="@+id/expert_tip_3"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/expert_tip_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp20"
        android:text="@string/detail_tip_function_5"
        android:textColor="#999999"
        android:textSize="@dimen/text_size_middle1"
        app:layout_constraintBottom_toTopOf="@+id/upload_to_ums"
        app:layout_constraintLeft_toLeftOf="@+id/expert_tip_1"
        app:layout_constraintRight_toRightOf="@+id/expert_tip_1"
        app:layout_constraintTop_toBottomOf="@+id/expert_tip_4"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/upload_to_ums"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp10"
        android:background="@drawable/blue_to_blue_light"
        android:foreground="?attr/selectableItemBackground"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="@dimen/dp50"
        android:text="@string/upload_to_ums"
        android:textAllCaps="false"
        android:textAppearance="@android:style/Widget.TextView"
        android:textColor="@color/white_light"
        android:textSize="@dimen/text_size_middle3"
        app:cornerRadius="@dimen/dp20"
        app:icon="@drawable/ic_upload"
        app:iconSize="@dimen/dp30"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/qrcode_generation"
        app:layout_constraintDimensionRatio="10:2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expert_tip_5"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/qrcode_generation"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp10"
        android:background="@drawable/blue_to_blue_light"
        android:foreground="?attr/selectableItemBackground"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="@dimen/dp50"
        android:text="@string/qrcode_genera"
        android:textAllCaps="false"
        android:textAppearance="@android:style/Widget.TextView"
        android:textColor="@color/white_light"
        android:textSize="@dimen/text_size_middle3"
        app:cornerRadius="@dimen/dp3"
        app:icon="@drawable/ic_qrcode"
        app:iconSize="@dimen/dp30"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/expert_to_local"
        app:layout_constraintDimensionRatio="10:2"
        app:layout_constraintLeft_toLeftOf="@+id/upload_to_ums"
        app:layout_constraintRight_toRightOf="@+id/upload_to_ums"
        app:layout_constraintTop_toBottomOf="@+id/upload_to_ums"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/expert_to_local"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/blue_to_blue_light"
        android:foreground="?attr/selectableItemBackground"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="@dimen/dp50"
        android:text="@string/local_expert"
        android:textAllCaps="false"
        android:textAppearance="@android:style/Widget.TextView"
        android:textColor="@color/white_light"
        android:textSize="@dimen/text_size_middle3"
        app:cornerRadius="@dimen/dp3"
        app:icon="@drawable/ic_expert"
        app:iconSize="@dimen/dp30"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="10:2"
        app:layout_constraintLeft_toLeftOf="@+id/upload_to_ums"
        app:layout_constraintRight_toRightOf="@+id/upload_to_ums"
        app:layout_constraintTop_toBottomOf="@+id/qrcode_generation"
        app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>
