<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_expert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/import_scanner"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginBottom="@dimen/dp10"
        android:background="@drawable/blue_to_blue_light"
        android:foreground="?attr/selectableItemBackground"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="@dimen/dp50"
        android:text="@string/import_from_scanner"
        android:textAllCaps="false"
        android:textAppearance="@android:style/Widget.TextView"
        android:textColor="@color/white_light"
        android:textSize="@dimen/text_size_middle3"
        app:cornerRadius="@dimen/dp20"
        app:icon="@drawable/ic_upload"
        app:iconSize="@dimen/dp30"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/import_camera"
        app:layout_constraintDimensionRatio="10:2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/import_camera"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp10"
        android:background="@drawable/blue_to_blue_light"
        android:foreground="?attr/selectableItemBackground"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="@dimen/dp50"
        android:text="@string/import_from_camera"
        android:textAllCaps="false"
        android:textAppearance="@android:style/Widget.TextView"
        android:textColor="@color/white_light"
        android:textSize="@dimen/text_size_middle3"
        app:cornerRadius="@dimen/dp3"
        app:icon="@drawable/ic_qrcode"
        app:iconSize="@dimen/dp30"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/generate_qr"
        app:layout_constraintDimensionRatio="10:2"
        app:layout_constraintLeft_toLeftOf="@+id/import_scanner"
        app:layout_constraintRight_toRightOf="@+id/import_scanner"
        app:layout_constraintTop_toBottomOf="@+id/import_scanner"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/generate_qr"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/blue_to_blue_light"
        android:foreground="?attr/selectableItemBackground"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingStart="@dimen/dp50"
        android:text="@string/qrcode_genera"
        android:textAllCaps="false"
        android:textAppearance="@android:style/Widget.TextView"
        android:textColor="@color/white_light"
        android:textSize="@dimen/text_size_middle3"
        app:cornerRadius="@dimen/dp3"
        app:icon="@drawable/ic_expert"
        app:iconSize="@dimen/dp30"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="10:2"
        app:layout_constraintLeft_toLeftOf="@+id/import_scanner"
        app:layout_constraintRight_toRightOf="@+id/import_scanner"
        app:layout_constraintTop_toBottomOf="@+id/import_camera"
        app:layout_constraintVertical_chainStyle="packed" />
</androidx.constraintlayout.widget.ConstraintLayout>
